apps/bifrost/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bifrost-svc
  namespace: apps
  labels:
    app: bifrost
spec:
  selector:
    app: bifrost
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
