apps/bifrost/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bifrost-ingressroute
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bifrost.macbytes.io`)
      kind: Rule
      services:
        - name: bifrost-svc
          port: 8080
  tls:
    secretName: bifrost-tls-certificate
